实现了根据id查找学生信息，修改学生，删除学生信息的功能； 对于取出数据量而言，使用临时容器存放，小批量的无影响，大批量因后期改用数据库。

--- a/qt-workplace/studentSystem/modifywidget.ui
+++ b/qt-workplace/studentSystem/modifywidget.ui
@@ -302,7 +302,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit_number">
+       <widget class="QLineEdit" name="lineEdit_id">
         <property name="minimumSize">
          <size>
           <width>150</width>
@@ -388,6 +388,13 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btn_Search">
+        <property name="text">
+         <string>查找</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
