--- a/qt-workplace/studentSystem/selectwidget.ui
+++ b/qt-workplace/studentSystem/selectwidget.ui
@@ -355,7 +355,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="btn_Search">
         <property name="text">
          <string>查询</string>
         </property>
